infrastructure/cilium/allow-coredns.yaml
# This needs to be set for the coredns to be used
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-coredns
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      "k8s-app": kube-dns
  ingress:
  - fromEntities:
    - cluster
  egress:
  - toEntities:
    - cluster
