infrastructure/cilium/allow-hubble.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-ui
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": hubble-ui
  ingress:
  - fromEntities:
    - world
  egress:
  - toEntities:
    - cluster
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-relay
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": hubble-relay
  ingress:
  - fromEntities:
    - cluster
  egress:
  - toEntities:
    - cluster
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-peer
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": hubble-peer
  ingress:
  - fromEntities:
    - cluster
  egress:
  - toEntities:
    - cluster
