infrastructure/cilium/policy-kube-system-namespace.yaml
# This needs to be set for the coredns to be used
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy-kube-system-namespace
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      {}

  ingress:
  - fromEntities:
    - cluster

  egress:
  - toEntities:
    - cluster
